add datasource example