@@ -6,12 +6,15 @@ import com.jcraft.jsch.Session;
 import com.jcraft.jsch.UserInfo;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.*;
 
 /**
+ * The type Ssh proxy manager.
+ *
  * @author Fandy
- **/
+ */
 @SuppressWarnings("unused")
 public class SshProxyManager {
 
@@ -24,6 +27,7 @@ public class SshProxyManager {
     private static final String STRICT_HOST_KEY_CHECKING_VALUE = "no";
     private static final String HOST_PORT = "%s:%d";
     private static final String LOCALHOST = "localhost";
+    private static final String JDBC_URL_PREFIX = "jdbc:";
 
     private static SshProxyManager sshProxyManager = null;
 
@@ -31,12 +35,24 @@ public class SshProxyManager {
     private Map<String, String> portMapping = new HashMap<>();
 
 
+    /**
+     * Gets ssh proxy manager and init configs.
+     *
+     * @param configs the configs
+     * @return the ssh proxy manager
+     * @throws JSchException the j sch exception
+     */
     public synchronized static SshProxyManager getSSHProxyManager(List<SshProxyConfig> configs) throws JSchException {
         sshProxyManager = getSSHProxyManager();
         sshProxyManager.addConfig(configs);
         return sshProxyManager;
     }
 
+    /**
+     * Gets ssh proxy manager.
+     *
+     * @return the ssh proxy manager
+     */
     public synchronized static SshProxyManager getSSHProxyManager() {
         if (null == sshProxyManager) {
             sshProxyManager = new SshProxyManager();
@@ -44,18 +60,33 @@ public class SshProxyManager {
         return sshProxyManager;
     }
 
+    /**
+     * Shutdown.
+     */
     public synchronized void shutdown() {
         for (Session session : sessions) {
             session.disconnect();
         }
     }
 
+    /**
+     * Add config.
+     *
+     * @param configs the configs
+     * @throws JSchException the j sch exception
+     */
     public void addConfig(List<SshProxyConfig> configs) throws JSchException {
         for (SshProxyConfig config : configs) {
             addConfig(config);
         }
     }
 
+    /**
+     * Add config.
+     *
+     * @param config the config
+     * @throws JSchException the j sch exception
+     */
     public void addConfig(SshProxyConfig config) throws JSchException {
         JSch jSch = new JSch();
         Session session;
@@ -112,17 +143,31 @@ public class SshProxyManager {
         session.setDaemonThread(true);
     }
 
+    /**
+     * Gets local host and port.
+     *
+     * @param host the host
+     * @param port the port
+     * @return the local host and port
+     */
     public String getLocalHostAndPort(String host, int port) {
         return portMapping.get(String.format(HOST_PORT, host, port));
     }
 
+    /**
+     * Gets local url.
+     *
+     * @param urlStr the url str
+     * @return the local url
+     * @throws MalformedURLException the malformed url exception
+     */
     public String getLocalUrl(String urlStr) throws MalformedURLException {
-        URL url = new URL(urlStr);
-        String localHostAndPort = getSSHProxyManager().getLocalHostAndPort(url.getHost(), url.getPort());
+        URI uri = URI.create(urlStr);
+        String localHostAndPort = getSSHProxyManager().getLocalHostAndPort(uri.getHost(), uri.getPort());
         if (null == localHostAndPort) {
             return urlStr;
         }
-        return urlStr.replace(String.format(HOST_PORT, url.getHost(), url.getPort()), LOCALHOST);
+        return urlStr.replace(String.format(HOST_PORT, uri.getHost(), uri.getPort()), localHostAndPort);
     }
 
     private static class TunnelUserInfo implements UserInfo {
